# simple-textediter

./: Cargo.toml  README.md
src/: editor.rs  main.rs  vector.rs
src/editor/: command.rs  cursor.rs  draw.rs  inputstate.rs  rope.rs  textbox.rs  textrope.rs  windowstate.rs
src/editor/command/: parse.rs
src/editor/textrope/: action.rs  rope.rs
